After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 647700 - docs: g_settings_new_with_backend: fix wording
docs: g_settings_new_with_backend: fix wording
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: docs
unspecified
Other Linux
: Normal trivial
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2011-04-13 19:22 UTC by Thomas Andersen
Modified: 2011-04-15 00:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gsettings: fix wording in docs for g_settings_new_with_backend (998 bytes, patch)
2011-04-13 19:22 UTC, Thomas Andersen
none Details | Review

Description Thomas Andersen 2011-04-13 19:22:00 UTC
Created attachment 185903 [details] [review]
gsettings: fix wording in docs for g_settings_new_with_backend

g_settings_new_with_backend contains:

"Creating settings objects with an different backend allows accessing settings from a database other than the usual one."

At least "...an different..." should be "...a different...".

I would suggest changing it a bit more to:

"Creating a #GSettings object with a different backend allows accessing settings from a database other than the usual one."