Slight docs rewording

Proposed by Thomas Andersen,
https://bugzilla.gnome.org/show_bug.cgi?id=647700